--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,64 +1,82 @@
 # 2023-11-14
 
-共 191 条
+共 208 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 12:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 14 2023 13:00:38 GMT+0800 (China Standard Time) -->
 1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
-1. [父亲因拿不出80元给女儿交餐费哭泣](https://so.toutiao.com/search?keyword=父亲因拿不出80元给女儿交餐费哭泣)
-1. [“家门口”就医要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医要“有”还要“优”)
 1. [女子让司机开50公里免费送还手机](https://so.toutiao.com/search?keyword=女子让司机开50公里免费送还手机)
-1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
-1. [网友吐槽政务大厅全天工作6个小时](https://so.toutiao.com/search?keyword=网友吐槽政务大厅全天工作6个小时)
-1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [“家门口”就医要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医要“有”还要“优”)
 1. [政务大厅全天工作6小时？官方回应](https://so.toutiao.com/search?keyword=政务大厅全天工作6小时？官方回应)
-1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
+1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
+1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
+1. [父亲因拿不出80元给女儿交餐费哭泣](https://so.toutiao.com/search?keyword=父亲因拿不出80元给女儿交餐费哭泣)
+1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
 1. [官方辟谣铲车将垃圾推入长江](https://so.toutiao.com/search?keyword=官方辟谣铲车将垃圾推入长江)
 1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
-1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
-1. [浙江省政协原副主席朱从玖被决定逮捕](https://so.toutiao.com/search?keyword=浙江省政协原副主席朱从玖被决定逮捕)
-1. [女子求职被要求假期陪老板一家度假](https://so.toutiao.com/search?keyword=女子求职被要求假期陪老板一家度假)
+1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
+1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [网友吐槽政务大厅全天工作6个小时](https://so.toutiao.com/search?keyword=网友吐槽政务大厅全天工作6个小时)
+1. [网友吐槽去父母家闹心：不停被投喂](https://so.toutiao.com/search?keyword=网友吐槽去父母家闹心：不停被投喂)
+1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
 1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
-1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
-1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
-1. [中金2024年A股市场展望：行则将至](https://so.toutiao.com/search?keyword=中金2024年A股市场展望：行则将至)
-1. [什么样的人易得糖尿病](https://so.toutiao.com/search?keyword=什么样的人易得糖尿病)
-1. [河南新乡一婚礼现场新娘骑白马入场](https://so.toutiao.com/search?keyword=河南新乡一婚礼现场新娘骑白马入场)
+1. [为什么是卡梅伦复出担任英外相](https://so.toutiao.com/search?keyword=为什么是卡梅伦复出担任英外相)
+1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
+1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
 1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
 1. [巴以冲突会演变成中东战争吗](https://so.toutiao.com/search?keyword=巴以冲突会演变成中东战争吗)
-1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
-1. [以称在加沙一医院发现哈马斯武器库](https://so.toutiao.com/search?keyword=以称在加沙一医院发现哈马斯武器库)
+1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [哈马斯发布巷战最新画面](https://so.toutiao.com/search?keyword=哈马斯发布巷战最新画面)
 1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [婚礼放鞭炮新娘被新郎和哥哥保护](https://so.toutiao.com/search?keyword=婚礼放鞭炮新娘被新郎和哥哥保护)
+1. [韩路：小米汽车定位豪华售价超30万](https://so.toutiao.com/search?keyword=韩路：小米汽车定位豪华售价超30万)
+1. [张雪峰为百名黑龙江贫困生捐羽绒服](https://so.toutiao.com/search?keyword=张雪峰为百名黑龙江贫困生捐羽绒服)
+1. [亳州原市长邓真晓被双开：私德不修](https://so.toutiao.com/search?keyword=亳州原市长邓真晓被双开：私德不修)
+1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
+1. [武汉两所高校官宣共用一扇校门](https://so.toutiao.com/search?keyword=武汉两所高校官宣共用一扇校门)
+1. [张靓颖演唱会上帮观众清空购物车](https://so.toutiao.com/search?keyword=张靓颖演唱会上帮观众清空购物车)
+1. [河南新乡一婚礼现场新娘骑白马入场](https://so.toutiao.com/search?keyword=河南新乡一婚礼现场新娘骑白马入场)
+1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
+1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
+1. [户外群私自揽客出游被执法人员截停](https://so.toutiao.com/search?keyword=户外群私自揽客出游被执法人员截停)
+1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
+1. [字母哥35+11 雄鹿118-109公牛](https://so.toutiao.com/search?keyword=字母哥35+11+雄鹿118-109公牛)
+1. [阿联酋航空订购95架波音飞机](https://so.toutiao.com/search?keyword=阿联酋航空订购95架波音飞机)
+1. [巨大弹坑被加沙儿童当成游戏场](https://so.toutiao.com/search?keyword=巨大弹坑被加沙儿童当成游戏场)
+1. [猛龙落后23分大逆转奇才](https://so.toutiao.com/search?keyword=猛龙落后23分大逆转奇才)
+1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
+1. [小红书公布双十一数据](https://so.toutiao.com/search?keyword=小红书公布双十一数据)
+1. [西亚卡姆39+11+7 猛龙23分逆转奇才](https://so.toutiao.com/search?keyword=西亚卡姆39+11+7+猛龙23分逆转奇才)
+1. [11月第2周生猪价格同比下跌42.1%](https://so.toutiao.com/search?keyword=11月第2周生猪价格同比下跌42.1%)
+1. [官方通报74名中学生呕吐：感染诺如](https://so.toutiao.com/search?keyword=官方通报74名中学生呕吐：感染诺如)
+1. [帕金斯：哈登该去打替补而不是威少](https://so.toutiao.com/search?keyword=帕金斯：哈登该去打替补而不是威少)
+1. [猛龙111-107逆转奇才](https://so.toutiao.com/search?keyword=猛龙111-107逆转奇才)
+1. [王栎鑫吴雅婷为女儿庆生](https://so.toutiao.com/search?keyword=王栎鑫吴雅婷为女儿庆生)
+1. [男子玉米地死亡 警方：酒后冻死](https://so.toutiao.com/search?keyword=男子玉米地死亡+警方：酒后冻死)
+1. [浙江省政协原副主席朱从玖被决定逮捕](https://so.toutiao.com/search?keyword=浙江省政协原副主席朱从玖被决定逮捕)
+1. [女子求职被要求假期陪老板一家度假](https://so.toutiao.com/search?keyword=女子求职被要求假期陪老板一家度假)
+1. [中金2024年A股市场展望：行则将至](https://so.toutiao.com/search?keyword=中金2024年A股市场展望：行则将至)
+1. [什么样的人易得糖尿病](https://so.toutiao.com/search?keyword=什么样的人易得糖尿病)
+1. [以称在加沙一医院发现哈马斯武器库](https://so.toutiao.com/search?keyword=以称在加沙一医院发现哈马斯武器库)
 1. [每8个成年人里就有1名糖尿病患者](https://so.toutiao.com/search?keyword=每8个成年人里就有1名糖尿病患者)
 1. [雷军：没想到小米14会这么受欢迎](https://so.toutiao.com/search?keyword=雷军：没想到小米14会这么受欢迎)
 1. [外媒称以军占领加沙城议会大楼](https://so.toutiao.com/search?keyword=外媒称以军占领加沙城议会大楼)
-1. [武汉两所高校官宣共用一扇校门](https://so.toutiao.com/search?keyword=武汉两所高校官宣共用一扇校门)
-1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
 1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
-1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
 1. [成都被狗咬伤女童已出院](https://so.toutiao.com/search?keyword=成都被狗咬伤女童已出院)
-1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
-1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
-1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
 1. [霉霉演唱会上表白男友特拉维斯](https://so.toutiao.com/search?keyword=霉霉演唱会上表白男友特拉维斯)
-1. [张雪峰为百名黑龙江贫困生捐羽绒服](https://so.toutiao.com/search?keyword=张雪峰为百名黑龙江贫困生捐羽绒服)
-1. [官方通报74名中学生呕吐：感染诺如](https://so.toutiao.com/search?keyword=官方通报74名中学生呕吐：感染诺如)
 1. [加沙35家医院中已有25家停止工作](https://so.toutiao.com/search?keyword=加沙35家医院中已有25家停止工作)
 1. [货车司机从窗口递出两张纸条求救](https://so.toutiao.com/search?keyword=货车司机从窗口递出两张纸条求救)
 1. [中方：中国领土我们一寸也不会放弃](https://so.toutiao.com/search?keyword=中方：中国领土我们一寸也不会放弃)
-1. [男子玉米地死亡 警方：酒后冻死](https://so.toutiao.com/search?keyword=男子玉米地死亡+警方：酒后冻死)
 1. [国际乒联公布第46周世界排名](https://so.toutiao.com/search?keyword=国际乒联公布第46周世界排名)
 1. [14日至15日华北中南部黄淮等地有霾](https://so.toutiao.com/search?keyword=14日至15日华北中南部黄淮等地有霾)
 1. [泰国队发布主题海报静待国足到来](https://so.toutiao.com/search?keyword=泰国队发布主题海报静待国足到来)
 1. [日本光刻机企业打算用定制绕开管制](https://so.toutiao.com/search?keyword=日本光刻机企业打算用定制绕开管制)
-1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
 1. [日本内阁官员接连辞职 岸田道歉](https://so.toutiao.com/search?keyword=日本内阁官员接连辞职+岸田道歉)
-1. [哈马斯发布巷战最新画面](https://so.toutiao.com/search?keyword=哈马斯发布巷战最新画面)
 1. [小车冲入派出所撞上警车](https://so.toutiao.com/search?keyword=小车冲入派出所撞上警车)
 1. [“家门口”就医 要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医+要“有”还要“优”)
 1. [何猷君用实力说话](https://so.toutiao.com/search?keyword=何猷君用实力说话)
 1. [小米雷军在线开怼iPhone](https://so.toutiao.com/search?keyword=小米雷军在线开怼iPhone)
-1. [张靓颖演唱会上帮观众清空购物车](https://so.toutiao.com/search?keyword=张靓颖演唱会上帮观众清空购物车)
 1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
 1. [火山引擎助长城汽车智能化提速](https://so.toutiao.com/search?keyword=火山引擎助长城汽车智能化提速)
 1. [以防长获授可将外国人定为恐怖分子](https://so.toutiao.com/search?keyword=以防长获授可将外国人定为恐怖分子)
@@ -70,7 +88,6 @@
 1. [多家银行存款利率下调](https://so.toutiao.com/search?keyword=多家银行存款利率下调)
 1. [以空袭加沙一难民营致至少37人死亡](https://so.toutiao.com/search?keyword=以空袭加沙一难民营致至少37人死亡)
 1. [台民调：侯柯配柯侯配均领先赖萧配](https://so.toutiao.com/search?keyword=台民调：侯柯配柯侯配均领先赖萧配)
-1. [巨大弹坑被加沙儿童当成游戏场](https://so.toutiao.com/search?keyword=巨大弹坑被加沙儿童当成游戏场)
 1. [北溪管道被炸一年多为何乏人问津](https://so.toutiao.com/search?keyword=北溪管道被炸一年多为何乏人问津)
 1. [哈马斯：停火5天可换取释放70人](https://so.toutiao.com/search?keyword=哈马斯：停火5天可换取释放70人)
 1. [专家：吸烟显著增加患糖尿病风险](https://so.toutiao.com/search?keyword=专家：吸烟显著增加患糖尿病风险)
