--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,56 +1,75 @@
 # 2023-11-14
 
-共 208 条
+共 223 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 13:00:38 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 14 2023 14:00:48 GMT+0800 (China Standard Time) -->
 1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
 1. [女子让司机开50公里免费送还手机](https://so.toutiao.com/search?keyword=女子让司机开50公里免费送还手机)
 1. [“家门口”就医要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医要“有”还要“优”)
-1. [政务大厅全天工作6小时？官方回应](https://so.toutiao.com/search?keyword=政务大厅全天工作6小时？官方回应)
-1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
-1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
+1. [当地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=当地回应政务大厅全天工作6小时)
+1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [为何是温州公安通缉缅北诈骗头目](https://so.toutiao.com/search?keyword=为何是温州公安通缉缅北诈骗头目)
+1. [官方回应四川南江一摩崖造像被涂色](https://so.toutiao.com/search?keyword=官方回应四川南江一摩崖造像被涂色)
+1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
 1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
-1. [父亲因拿不出80元给女儿交餐费哭泣](https://so.toutiao.com/search?keyword=父亲因拿不出80元给女儿交餐费哭泣)
-1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
 1. [官方辟谣铲车将垃圾推入长江](https://so.toutiao.com/search?keyword=官方辟谣铲车将垃圾推入长江)
 1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
-1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
-1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
-1. [网友吐槽政务大厅全天工作6个小时](https://so.toutiao.com/search?keyword=网友吐槽政务大厅全天工作6个小时)
-1. [网友吐槽去父母家闹心：不停被投喂](https://so.toutiao.com/search?keyword=网友吐槽去父母家闹心：不停被投喂)
-1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
-1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
-1. [为什么是卡梅伦复出担任英外相](https://so.toutiao.com/search?keyword=为什么是卡梅伦复出担任英外相)
-1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
+1. [多国专家期待APEC机制促进亚太合作](https://so.toutiao.com/search?keyword=多国专家期待APEC机制促进亚太合作)
+1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
+1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
+1. [4885份出生证被盗 时任科长被判8年](https://so.toutiao.com/search?keyword=4885份出生证被盗+时任科长被判8年)
+1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
 1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
+1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
+1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
 1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
 1. [巴以冲突会演变成中东战争吗](https://so.toutiao.com/search?keyword=巴以冲突会演变成中东战争吗)
-1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
-1. [哈马斯发布巷战最新画面](https://so.toutiao.com/search?keyword=哈马斯发布巷战最新画面)
+1. [结婚2月流产要离婚丈夫起诉还彩礼](https://so.toutiao.com/search?keyword=结婚2月流产要离婚丈夫起诉还彩礼)
+1. [约旦：拒绝接受以占领加沙部分领土](https://so.toutiao.com/search?keyword=约旦：拒绝接受以占领加沙部分领土)
 1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
+1. [哈马斯发布巷战最新画面](https://so.toutiao.com/search?keyword=哈马斯发布巷战最新画面)
+1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
+1. [武汉两所高校官宣共用一扇校门](https://so.toutiao.com/search?keyword=武汉两所高校官宣共用一扇校门)
+1. [以证实被哈马斯扣为人质的女兵身份](https://so.toutiao.com/search?keyword=以证实被哈马斯扣为人质的女兵身份)
+1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
+1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
+1. [俄军对叙利亚境内恐怖组织发动空袭](https://so.toutiao.com/search?keyword=俄军对叙利亚境内恐怖组织发动空袭)
+1. [帕金斯：哈登该去打替补而不是威少](https://so.toutiao.com/search?keyword=帕金斯：哈登该去打替补而不是威少)
+1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
+1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
+1. [朝鲜要求解散“联合国军司令部”](https://so.toutiao.com/search?keyword=朝鲜要求解散“联合国军司令部”)
+1. [河南新乡一婚礼现场新娘骑白马入场](https://so.toutiao.com/search?keyword=河南新乡一婚礼现场新娘骑白马入场)
+1. [中美元首会晤前吹了哪些“暖风”](https://so.toutiao.com/search?keyword=中美元首会晤前吹了哪些“暖风”)
+1. [邀中国警察参与城市巡逻？泰国澄清](https://so.toutiao.com/search?keyword=邀中国警察参与城市巡逻？泰国澄清)
+1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
+1. [第18届迪拜航展开幕](https://so.toutiao.com/search?keyword=第18届迪拜航展开幕)
+1. [网传九江火车站附近涉黄现象严重](https://so.toutiao.com/search?keyword=网传九江火车站附近涉黄现象严重)
+1. [官方通报74名中学生呕吐：感染诺如](https://so.toutiao.com/search?keyword=官方通报74名中学生呕吐：感染诺如)
+1. [这是90后父母取名的规律吗](https://so.toutiao.com/search?keyword=这是90后父母取名的规律吗)
+1. [前十月人民币贷款同比多增1.68万亿](https://so.toutiao.com/search?keyword=前十月人民币贷款同比多增1.68万亿)
+1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
+1. [前美职篮球员马布里申请落户香港](https://so.toutiao.com/search?keyword=前美职篮球员马布里申请落户香港)
+1. [小红书公布双十一数据](https://so.toutiao.com/search?keyword=小红书公布双十一数据)
 1. [婚礼放鞭炮新娘被新郎和哥哥保护](https://so.toutiao.com/search?keyword=婚礼放鞭炮新娘被新郎和哥哥保护)
+1. [政务大厅全天工作6小时？官方回应](https://so.toutiao.com/search?keyword=政务大厅全天工作6小时？官方回应)
+1. [父亲因拿不出80元给女儿交餐费哭泣](https://so.toutiao.com/search?keyword=父亲因拿不出80元给女儿交餐费哭泣)
+1. [网友吐槽政务大厅全天工作6个小时](https://so.toutiao.com/search?keyword=网友吐槽政务大厅全天工作6个小时)
+1. [网友吐槽去父母家闹心：不停被投喂](https://so.toutiao.com/search?keyword=网友吐槽去父母家闹心：不停被投喂)
+1. [为什么是卡梅伦复出担任英外相](https://so.toutiao.com/search?keyword=为什么是卡梅伦复出担任英外相)
 1. [韩路：小米汽车定位豪华售价超30万](https://so.toutiao.com/search?keyword=韩路：小米汽车定位豪华售价超30万)
 1. [张雪峰为百名黑龙江贫困生捐羽绒服](https://so.toutiao.com/search?keyword=张雪峰为百名黑龙江贫困生捐羽绒服)
 1. [亳州原市长邓真晓被双开：私德不修](https://so.toutiao.com/search?keyword=亳州原市长邓真晓被双开：私德不修)
-1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
-1. [武汉两所高校官宣共用一扇校门](https://so.toutiao.com/search?keyword=武汉两所高校官宣共用一扇校门)
 1. [张靓颖演唱会上帮观众清空购物车](https://so.toutiao.com/search?keyword=张靓颖演唱会上帮观众清空购物车)
-1. [河南新乡一婚礼现场新娘骑白马入场](https://so.toutiao.com/search?keyword=河南新乡一婚礼现场新娘骑白马入场)
-1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
-1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
 1. [户外群私自揽客出游被执法人员截停](https://so.toutiao.com/search?keyword=户外群私自揽客出游被执法人员截停)
-1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
 1. [字母哥35+11 雄鹿118-109公牛](https://so.toutiao.com/search?keyword=字母哥35+11+雄鹿118-109公牛)
 1. [阿联酋航空订购95架波音飞机](https://so.toutiao.com/search?keyword=阿联酋航空订购95架波音飞机)
 1. [巨大弹坑被加沙儿童当成游戏场](https://so.toutiao.com/search?keyword=巨大弹坑被加沙儿童当成游戏场)
 1. [猛龙落后23分大逆转奇才](https://so.toutiao.com/search?keyword=猛龙落后23分大逆转奇才)
-1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
-1. [小红书公布双十一数据](https://so.toutiao.com/search?keyword=小红书公布双十一数据)
 1. [西亚卡姆39+11+7 猛龙23分逆转奇才](https://so.toutiao.com/search?keyword=西亚卡姆39+11+7+猛龙23分逆转奇才)
 1. [11月第2周生猪价格同比下跌42.1%](https://so.toutiao.com/search?keyword=11月第2周生猪价格同比下跌42.1%)
-1. [官方通报74名中学生呕吐：感染诺如](https://so.toutiao.com/search?keyword=官方通报74名中学生呕吐：感染诺如)
-1. [帕金斯：哈登该去打替补而不是威少](https://so.toutiao.com/search?keyword=帕金斯：哈登该去打替补而不是威少)
 1. [猛龙111-107逆转奇才](https://so.toutiao.com/search?keyword=猛龙111-107逆转奇才)
 1. [王栎鑫吴雅婷为女儿庆生](https://so.toutiao.com/search?keyword=王栎鑫吴雅婷为女儿庆生)
 1. [男子玉米地死亡 警方：酒后冻死](https://so.toutiao.com/search?keyword=男子玉米地死亡+警方：酒后冻死)
@@ -77,7 +96,6 @@
 1. [“家门口”就医 要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医+要“有”还要“优”)
 1. [何猷君用实力说话](https://so.toutiao.com/search?keyword=何猷君用实力说话)
 1. [小米雷军在线开怼iPhone](https://so.toutiao.com/search?keyword=小米雷军在线开怼iPhone)
-1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
 1. [火山引擎助长城汽车智能化提速](https://so.toutiao.com/search?keyword=火山引擎助长城汽车智能化提速)
 1. [以防长获授可将外国人定为恐怖分子](https://so.toutiao.com/search?keyword=以防长获授可将外国人定为恐怖分子)
 1. [加沙地带35家医院已有23家关闭](https://so.toutiao.com/search?keyword=加沙地带35家医院已有23家关闭)
@@ -100,7 +118,6 @@
 1. [巴总理呼吁向加沙地带空投援助物资](https://so.toutiao.com/search?keyword=巴总理呼吁向加沙地带空投援助物资)
 1. [律师谈校长强奸多名幼女被执行死刑](https://so.toutiao.com/search?keyword=律师谈校长强奸多名幼女被执行死刑)
 1. [以色列称阿巴斯不应接管加沙](https://so.toutiao.com/search?keyword=以色列称阿巴斯不应接管加沙)
-1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
 1. [侯友宜：不能再让民进党新潮流当选](https://so.toutiao.com/search?keyword=侯友宜：不能再让民进党新潮流当选)
 1. [3D还原校长强奸猥亵22名学生案](https://so.toutiao.com/search?keyword=3D还原校长强奸猥亵22名学生案)
 1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
@@ -119,7 +136,6 @@
 1. [刘殿座晒国足三位国门合影](https://so.toutiao.com/search?keyword=刘殿座晒国足三位国门合影)
 1. [国民党将中常会延后至19日召开](https://so.toutiao.com/search?keyword=国民党将中常会延后至19日召开)
 1. [四川女篮新赛季豪取9连胜](https://so.toutiao.com/search?keyword=四川女篮新赛季豪取9连胜)
-1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
 1. [巴以冲突致加沙超70万儿童流离失所](https://so.toutiao.com/search?keyword=巴以冲突致加沙超70万儿童流离失所)
 1. [俩男孩用雪圈接老师上班](https://so.toutiao.com/search?keyword=俩男孩用雪圈接老师上班)
 1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
@@ -184,7 +200,6 @@
 1. [海南一轿车撞警车？警方：系误操作](https://so.toutiao.com/search?keyword=海南一轿车撞警车？警方：系误操作)
 1. [山西一原副市长被逮捕](https://so.toutiao.com/search?keyword=山西一原副市长被逮捕)
 1. [陕西14、15日将迎新一轮雨雪天气](https://so.toutiao.com/search?keyword=陕西14、15日将迎新一轮雨雪天气)
-1. [朝鲜要求解散“联合国军司令部”](https://so.toutiao.com/search?keyword=朝鲜要求解散“联合国军司令部”)
 1. [乌前官员：泽连斯基可能会被赶下台](https://so.toutiao.com/search?keyword=乌前官员：泽连斯基可能会被赶下台)
 1. [中国会否同意购买美国波音737MAX](https://so.toutiao.com/search?keyword=中国会否同意购买美国波音737MAX)
 1. [里夫斯谈适应个人在队内的新角色](https://so.toutiao.com/search?keyword=里夫斯谈适应个人在队内的新角色)
