--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,48 +1,67 @@
 # 2023-11-14
 
-共 241 条
+共 255 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 15:00:43 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 14 2023 16:00:52 GMT+0800 (China Standard Time) -->
 1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
-1. [当地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=当地回应政务大厅全天工作6小时)
-1. [“家门口”就医要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医要“有”还要“优”)
-1. [癌症和这七个因素有关](https://so.toutiao.com/search?keyword=癌症和这七个因素有关)
-1. [女子让司机开50公里免费送还手机](https://so.toutiao.com/search?keyword=女子让司机开50公里免费送还手机)
-1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
-1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
-1. [卡梅伦复出影响几何](https://so.toutiao.com/search?keyword=卡梅伦复出影响几何)
 1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
+1. [秋粮收购已累计超4000万吨](https://so.toutiao.com/search?keyword=秋粮收购已累计超4000万吨)
+1. [当地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=当地回应政务大厅全天工作6小时)
+1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
+1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
+1. [邝肖卿首次成为中国女首富](https://so.toutiao.com/search?keyword=邝肖卿首次成为中国女首富)
+1. [癌症和这七个因素有关](https://so.toutiao.com/search?keyword=癌症和这七个因素有关)
+1. [黄日华为友谊赛不理智行为道歉](https://so.toutiao.com/search?keyword=黄日华为友谊赛不理智行为道歉)
 1. [官方辟谣铲车将垃圾推入长江](https://so.toutiao.com/search?keyword=官方辟谣铲车将垃圾推入长江)
 1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
-1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
-1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
-1. [交警在高架巡逻时意外摔倒](https://so.toutiao.com/search?keyword=交警在高架巡逻时意外摔倒)
-1. [美国搅动南海局势引地区国家担忧](https://so.toutiao.com/search?keyword=美国搅动南海局势引地区国家担忧)
-1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
-1. [这是90后父母取名的规律吗](https://so.toutiao.com/search?keyword=这是90后父母取名的规律吗)
+1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
+1. [女子让司机开50公里免费送还手机](https://so.toutiao.com/search?keyword=女子让司机开50公里免费送还手机)
+1. [台退将谈菲律宾非法“坐滩”军舰](https://so.toutiao.com/search?keyword=台退将谈菲律宾非法“坐滩”军舰)
+1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
+1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
 1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
-1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
-1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [床虱危机为何席卷全球](https://so.toutiao.com/search?keyword=床虱危机为何席卷全球)
+1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
 1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
 1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
-1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
+1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
+1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
+1. [四川凉山一村规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=四川凉山一村规定蹲地用餐罚20元)
+1. [生猪10月份售价再次下降](https://so.toutiao.com/search?keyword=生猪10月份售价再次下降)
 1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
 1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
-1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
-1. [哈马斯发布巷战最新画面](https://so.toutiao.com/search?keyword=哈马斯发布巷战最新画面)
-1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
-1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
 1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
-1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
-1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
-1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
-1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
-1. [檀健次与女生亲密搂肩被拍](https://so.toutiao.com/search?keyword=檀健次与女生亲密搂肩被拍)
-1. [颜丙涛与越南女友办跨国婚礼](https://so.toutiao.com/search?keyword=颜丙涛与越南女友办跨国婚礼)
-1. [韩媒：韩国散户“抄底”中国股市](https://so.toutiao.com/search?keyword=韩媒：韩国散户“抄底”中国股市)
+1. [为何是温州公安通缉缅北诈骗头目](https://so.toutiao.com/search?keyword=为何是温州公安通缉缅北诈骗头目)
+1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
 1. [全国猪肉价格连续8周下跌](https://so.toutiao.com/search?keyword=全国猪肉价格连续8周下跌)
+1. [小米华为手机销量同比增长超4成](https://so.toutiao.com/search?keyword=小米华为手机销量同比增长超4成)
+1. [什么样的人易得糖尿病](https://so.toutiao.com/search?keyword=什么样的人易得糖尿病)
+1. [日本计划明年1月发射情报收集卫星](https://so.toutiao.com/search?keyword=日本计划明年1月发射情报收集卫星)
+1. [官方回应蹲地用餐罚20元](https://so.toutiao.com/search?keyword=官方回应蹲地用餐罚20元)
+1. [华为鸿蒙原生应用时代即将到来](https://so.toutiao.com/search?keyword=华为鸿蒙原生应用时代即将到来)
+1. [这是90后父母取名的规律吗](https://so.toutiao.com/search?keyword=这是90后父母取名的规律吗)
+1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
+1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
+1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
+1. [迪拜航空展首日交易额近千亿美元](https://so.toutiao.com/search?keyword=迪拜航空展首日交易额近千亿美元)
+1. [陕西省发布一批人事任免通知](https://so.toutiao.com/search?keyword=陕西省发布一批人事任免通知)
 1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
+1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
+1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
+1. [檀健次与女生亲密搂肩被拍](https://so.toutiao.com/search?keyword=檀健次与女生亲密搂肩被拍)
+1. [韩媒：韩国散户“抄底”中国股市](https://so.toutiao.com/search?keyword=韩媒：韩国散户“抄底”中国股市)
+1. [颜丙涛与越南女友办跨国婚礼](https://so.toutiao.com/search?keyword=颜丙涛与越南女友办跨国婚礼)
+1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
+1. [“家门口”就医要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医要“有”还要“优”)
+1. [卡梅伦复出影响几何](https://so.toutiao.com/search?keyword=卡梅伦复出影响几何)
+1. [交警在高架巡逻时意外摔倒](https://so.toutiao.com/search?keyword=交警在高架巡逻时意外摔倒)
+1. [美国搅动南海局势引地区国家担忧](https://so.toutiao.com/search?keyword=美国搅动南海局势引地区国家担忧)
+1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
+1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
+1. [哈马斯发布巷战最新画面](https://so.toutiao.com/search?keyword=哈马斯发布巷战最新画面)
+1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
 1. [朱立伦说接受“全民调” 专家解读](https://so.toutiao.com/search?keyword=朱立伦说接受“全民调”+专家解读)
 1. [“光腿神器”被嘲“现代刑具”](https://so.toutiao.com/search?keyword=“光腿神器”被嘲“现代刑具”)
 1. [原广州军区副政委王同琢中将逝世](https://so.toutiao.com/search?keyword=原广州军区副政委王同琢中将逝世)
@@ -51,10 +70,7 @@
 1. [男子玉米地死亡 警方：酒后冻死](https://so.toutiao.com/search?keyword=男子玉米地死亡+警方：酒后冻死)
 1. [官方通报74名中学生呕吐：感染诺如](https://so.toutiao.com/search?keyword=官方通报74名中学生呕吐：感染诺如)
 1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
-1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
-1. [陕西省发布一批人事任免通知](https://so.toutiao.com/search?keyword=陕西省发布一批人事任免通知)
 1. [多家银行存款利率下调](https://so.toutiao.com/search?keyword=多家银行存款利率下调)
-1. [为何是温州公安通缉缅北诈骗头目](https://so.toutiao.com/search?keyword=为何是温州公安通缉缅北诈骗头目)
 1. [官方回应四川南江一摩崖造像被涂色](https://so.toutiao.com/search?keyword=官方回应四川南江一摩崖造像被涂色)
 1. [多国专家期待APEC机制促进亚太合作](https://so.toutiao.com/search?keyword=多国专家期待APEC机制促进亚太合作)
 1. [4885份出生证被盗 时任科长被判8年](https://so.toutiao.com/search?keyword=4885份出生证被盗+时任科长被判8年)
@@ -96,7 +112,6 @@
 1. [浙江省政协原副主席朱从玖被决定逮捕](https://so.toutiao.com/search?keyword=浙江省政协原副主席朱从玖被决定逮捕)
 1. [女子求职被要求假期陪老板一家度假](https://so.toutiao.com/search?keyword=女子求职被要求假期陪老板一家度假)
 1. [中金2024年A股市场展望：行则将至](https://so.toutiao.com/search?keyword=中金2024年A股市场展望：行则将至)
-1. [什么样的人易得糖尿病](https://so.toutiao.com/search?keyword=什么样的人易得糖尿病)
 1. [以称在加沙一医院发现哈马斯武器库](https://so.toutiao.com/search?keyword=以称在加沙一医院发现哈马斯武器库)
 1. [每8个成年人里就有1名糖尿病患者](https://so.toutiao.com/search?keyword=每8个成年人里就有1名糖尿病患者)
 1. [雷军：没想到小米14会这么受欢迎](https://so.toutiao.com/search?keyword=雷军：没想到小米14会这么受欢迎)
@@ -120,7 +135,6 @@
 1. [以防长获授可将外国人定为恐怖分子](https://so.toutiao.com/search?keyword=以防长获授可将外国人定为恐怖分子)
 1. [加沙地带35家医院已有23家关闭](https://so.toutiao.com/search?keyword=加沙地带35家医院已有23家关闭)
 1. [欧盟呼吁巴以立即实施人道主义停火](https://so.toutiao.com/search?keyword=欧盟呼吁巴以立即实施人道主义停火)
-1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
 1. [蒋万安：反对“台独”](https://so.toutiao.com/search?keyword=蒋万安：反对“台独”)
 1. [巴以冲突下的乌克兰困境](https://so.toutiao.com/search?keyword=巴以冲突下的乌克兰困境)
 1. [以空袭加沙一难民营致至少37人死亡](https://so.toutiao.com/search?keyword=以空袭加沙一难民营致至少37人死亡)
