--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,46 +1,71 @@
 # 2023-11-14
 
-共 255 条
+共 275 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 16:00:52 GMT+0800 (China Standard Time) -->
-1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
-1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
-1. [秋粮收购已累计超4000万吨](https://so.toutiao.com/search?keyword=秋粮收购已累计超4000万吨)
+<!-- 最后更新时间 Tue Nov 14 2023 17:00:42 GMT+0800 (China Standard Time) -->
 1. [当地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=当地回应政务大厅全天工作6小时)
-1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
+1. [黄日华为友谊赛不理智行为道歉](https://so.toutiao.com/search?keyword=黄日华为友谊赛不理智行为道歉)
+1. [我国制造业转型升级持续提速](https://so.toutiao.com/search?keyword=我国制造业转型升级持续提速)
+1. [四川凉山一村规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=四川凉山一村规定蹲地用餐罚20元)
+1. [网红“快乐小赵”去世](https://so.toutiao.com/search?keyword=网红“快乐小赵”去世)
+1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
+1. [四川一乡镇发通知不叠被子罚10元](https://so.toutiao.com/search?keyword=四川一乡镇发通知不叠被子罚10元)
+1. [哈马斯是如何回击以色列猛攻的](https://so.toutiao.com/search?keyword=哈马斯是如何回击以色列猛攻的)
+1. [官方辟谣宿淮收费站将被拆除](https://so.toutiao.com/search?keyword=官方辟谣宿淮收费站将被拆除)
+1. [当地回应村民不洗碗筷将被罚款10元](https://so.toutiao.com/search?keyword=当地回应村民不洗碗筷将被罚款10元)
+1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
+1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
+1. [媒体：缅北“明家”覆灭在即](https://so.toutiao.com/search?keyword=媒体：缅北“明家”覆灭在即)
 1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
+1. [官方回应蹲地用餐罚20元](https://so.toutiao.com/search?keyword=官方回应蹲地用餐罚20元)
+1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
+1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
+1. [床虱危机为何席卷全球](https://so.toutiao.com/search?keyword=床虱危机为何席卷全球)
+1. [缅甸果敢明学昌为何被中国警方通缉](https://so.toutiao.com/search?keyword=缅甸果敢明学昌为何被中国警方通缉)
+1. [拜登最重要的外交周被指已分崩离析](https://so.toutiao.com/search?keyword=拜登最重要的外交周被指已分崩离析)
+1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
+1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [为何是温州公安通缉缅北诈骗头目](https://so.toutiao.com/search?keyword=为何是温州公安通缉缅北诈骗头目)
+1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
+1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
+1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
+1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
+1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
+1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
+1. [三辆渣土车并行挡住后车](https://so.toutiao.com/search?keyword=三辆渣土车并行挡住后车)
+1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [华为鸿蒙原生应用时代即将到来](https://so.toutiao.com/search?keyword=华为鸿蒙原生应用时代即将到来)
+1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
+1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
+1. [收评：沪指震荡走高涨0.31%](https://so.toutiao.com/search?keyword=收评：沪指震荡走高涨0.31%)
+1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
+1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
+1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
+1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
+1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
+1. [东北将迎11月来第三轮雨雪](https://so.toutiao.com/search?keyword=东北将迎11月来第三轮雨雪)
+1. [印度影迷在影院放映时燃放烟花](https://so.toutiao.com/search?keyword=印度影迷在影院放映时燃放烟花)
+1. [迪拜航展 中巴“枭龙”战机很吸睛](https://so.toutiao.com/search?keyword=迪拜航展+中巴“枭龙”战机很吸睛)
+1. [外交部回应卡梅伦出任英国外交大臣](https://so.toutiao.com/search?keyword=外交部回应卡梅伦出任英国外交大臣)
+1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
+1. [沪深两市今日成交额合计8935亿元](https://so.toutiao.com/search?keyword=沪深两市今日成交额合计8935亿元)
+1. [中国公民已全部安全离开加沙](https://so.toutiao.com/search?keyword=中国公民已全部安全离开加沙)
+1. [网传九江火车站附近涉黄现象严重](https://so.toutiao.com/search?keyword=网传九江火车站附近涉黄现象严重)
+1. [应急科普：消防安全8大常见误区](https://so.toutiao.com/search?keyword=应急科普：消防安全8大常见误区)
+1. [看空军八一飞行表演队炫舞迪拜](https://so.toutiao.com/search?keyword=看空军八一飞行表演队炫舞迪拜)
+1. [秋粮收购已累计超4000万吨](https://so.toutiao.com/search?keyword=秋粮收购已累计超4000万吨)
 1. [邝肖卿首次成为中国女首富](https://so.toutiao.com/search?keyword=邝肖卿首次成为中国女首富)
 1. [癌症和这七个因素有关](https://so.toutiao.com/search?keyword=癌症和这七个因素有关)
-1. [黄日华为友谊赛不理智行为道歉](https://so.toutiao.com/search?keyword=黄日华为友谊赛不理智行为道歉)
 1. [官方辟谣铲车将垃圾推入长江](https://so.toutiao.com/search?keyword=官方辟谣铲车将垃圾推入长江)
-1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
-1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
 1. [女子让司机开50公里免费送还手机](https://so.toutiao.com/search?keyword=女子让司机开50公里免费送还手机)
 1. [台退将谈菲律宾非法“坐滩”军舰](https://so.toutiao.com/search?keyword=台退将谈菲律宾非法“坐滩”军舰)
-1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
-1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
-1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
-1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
-1. [床虱危机为何席卷全球](https://so.toutiao.com/search?keyword=床虱危机为何席卷全球)
-1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
 1. [以色列总理谈在加沙的三大主要目标](https://so.toutiao.com/search?keyword=以色列总理谈在加沙的三大主要目标)
-1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
-1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
-1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
-1. [四川凉山一村规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=四川凉山一村规定蹲地用餐罚20元)
 1. [生猪10月份售价再次下降](https://so.toutiao.com/search?keyword=生猪10月份售价再次下降)
-1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
-1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
-1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
-1. [为何是温州公安通缉缅北诈骗头目](https://so.toutiao.com/search?keyword=为何是温州公安通缉缅北诈骗头目)
-1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
 1. [全国猪肉价格连续8周下跌](https://so.toutiao.com/search?keyword=全国猪肉价格连续8周下跌)
 1. [小米华为手机销量同比增长超4成](https://so.toutiao.com/search?keyword=小米华为手机销量同比增长超4成)
 1. [什么样的人易得糖尿病](https://so.toutiao.com/search?keyword=什么样的人易得糖尿病)
 1. [日本计划明年1月发射情报收集卫星](https://so.toutiao.com/search?keyword=日本计划明年1月发射情报收集卫星)
-1. [官方回应蹲地用餐罚20元](https://so.toutiao.com/search?keyword=官方回应蹲地用餐罚20元)
-1. [华为鸿蒙原生应用时代即将到来](https://so.toutiao.com/search?keyword=华为鸿蒙原生应用时代即将到来)
 1. [这是90后父母取名的规律吗](https://so.toutiao.com/search?keyword=这是90后父母取名的规律吗)
 1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
 1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
@@ -48,7 +73,6 @@
 1. [迪拜航空展首日交易额近千亿美元](https://so.toutiao.com/search?keyword=迪拜航空展首日交易额近千亿美元)
 1. [陕西省发布一批人事任免通知](https://so.toutiao.com/search?keyword=陕西省发布一批人事任免通知)
 1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
-1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
 1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
 1. [檀健次与女生亲密搂肩被拍](https://so.toutiao.com/search?keyword=檀健次与女生亲密搂肩被拍)
 1. [韩媒：韩国散户“抄底”中国股市](https://so.toutiao.com/search?keyword=韩媒：韩国散户“抄底”中国股市)
@@ -58,7 +82,6 @@
 1. [卡梅伦复出影响几何](https://so.toutiao.com/search?keyword=卡梅伦复出影响几何)
 1. [交警在高架巡逻时意外摔倒](https://so.toutiao.com/search?keyword=交警在高架巡逻时意外摔倒)
 1. [美国搅动南海局势引地区国家担忧](https://so.toutiao.com/search?keyword=美国搅动南海局势引地区国家担忧)
-1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
 1. [双十一全网消费11386亿元](https://so.toutiao.com/search?keyword=双十一全网消费11386亿元)
 1. [哈马斯发布巷战最新画面](https://so.toutiao.com/search?keyword=哈马斯发布巷战最新画面)
 1. [胡锡进：天猫京东双11成交额无须瞒着](https://so.toutiao.com/search?keyword=胡锡进：天猫京东双11成交额无须瞒着)
@@ -69,7 +92,6 @@
 1. [光腿神器的危害有多大](https://so.toutiao.com/search?keyword=光腿神器的危害有多大)
 1. [男子玉米地死亡 警方：酒后冻死](https://so.toutiao.com/search?keyword=男子玉米地死亡+警方：酒后冻死)
 1. [官方通报74名中学生呕吐：感染诺如](https://so.toutiao.com/search?keyword=官方通报74名中学生呕吐：感染诺如)
-1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
 1. [多家银行存款利率下调](https://so.toutiao.com/search?keyword=多家银行存款利率下调)
 1. [官方回应四川南江一摩崖造像被涂色](https://so.toutiao.com/search?keyword=官方回应四川南江一摩崖造像被涂色)
 1. [多国专家期待APEC机制促进亚太合作](https://so.toutiao.com/search?keyword=多国专家期待APEC机制促进亚太合作)
@@ -86,7 +108,6 @@
 1. [中美元首会晤前吹了哪些“暖风”](https://so.toutiao.com/search?keyword=中美元首会晤前吹了哪些“暖风”)
 1. [邀中国警察参与城市巡逻？泰国澄清](https://so.toutiao.com/search?keyword=邀中国警察参与城市巡逻？泰国澄清)
 1. [第18届迪拜航展开幕](https://so.toutiao.com/search?keyword=第18届迪拜航展开幕)
-1. [网传九江火车站附近涉黄现象严重](https://so.toutiao.com/search?keyword=网传九江火车站附近涉黄现象严重)
 1. [前十月人民币贷款同比多增1.68万亿](https://so.toutiao.com/search?keyword=前十月人民币贷款同比多增1.68万亿)
 1. [前美职篮球员马布里申请落户香港](https://so.toutiao.com/search?keyword=前美职篮球员马布里申请落户香港)
 1. [小红书公布双十一数据](https://so.toutiao.com/search?keyword=小红书公布双十一数据)
@@ -116,7 +137,6 @@
 1. [每8个成年人里就有1名糖尿病患者](https://so.toutiao.com/search?keyword=每8个成年人里就有1名糖尿病患者)
 1. [雷军：没想到小米14会这么受欢迎](https://so.toutiao.com/search?keyword=雷军：没想到小米14会这么受欢迎)
 1. [外媒称以军占领加沙城议会大楼](https://so.toutiao.com/search?keyword=外媒称以军占领加沙城议会大楼)
-1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
 1. [成都被狗咬伤女童已出院](https://so.toutiao.com/search?keyword=成都被狗咬伤女童已出院)
 1. [霉霉演唱会上表白男友特拉维斯](https://so.toutiao.com/search?keyword=霉霉演唱会上表白男友特拉维斯)
 1. [加沙35家医院中已有25家停止工作](https://so.toutiao.com/search?keyword=加沙35家医院中已有25家停止工作)
