--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,54 +1,75 @@
 # 2023-11-14
 
-共 275 条
+共 293 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 17:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 14 2023 18:00:35 GMT+0800 (China Standard Time) -->
 1. [当地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=当地回应政务大厅全天工作6小时)
 1. [黄日华为友谊赛不理智行为道歉](https://so.toutiao.com/search?keyword=黄日华为友谊赛不理智行为道歉)
 1. [我国制造业转型升级持续提速](https://so.toutiao.com/search?keyword=我国制造业转型升级持续提速)
-1. [四川凉山一村规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=四川凉山一村规定蹲地用餐罚20元)
-1. [网红“快乐小赵”去世](https://so.toutiao.com/search?keyword=网红“快乐小赵”去世)
+1. [老人接孩子途中嫖娼 金项链被偷](https://so.toutiao.com/search?keyword=老人接孩子途中嫖娼+金项链被偷)
 1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
-1. [四川一乡镇发通知不叠被子罚10元](https://so.toutiao.com/search?keyword=四川一乡镇发通知不叠被子罚10元)
-1. [哈马斯是如何回击以色列猛攻的](https://so.toutiao.com/search?keyword=哈马斯是如何回击以色列猛攻的)
-1. [官方辟谣宿淮收费站将被拆除](https://so.toutiao.com/search?keyword=官方辟谣宿淮收费站将被拆除)
-1. [当地回应村民不洗碗筷将被罚款10元](https://so.toutiao.com/search?keyword=当地回应村民不洗碗筷将被罚款10元)
-1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
-1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
-1. [媒体：缅北“明家”覆灭在即](https://so.toutiao.com/search?keyword=媒体：缅北“明家”覆灭在即)
 1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
-1. [官方回应蹲地用餐罚20元](https://so.toutiao.com/search?keyword=官方回应蹲地用餐罚20元)
+1. [四川一乡镇发通知不叠被子罚10元](https://so.toutiao.com/search?keyword=四川一乡镇发通知不叠被子罚10元)
+1. [网红“快乐小赵”去世](https://so.toutiao.com/search?keyword=网红“快乐小赵”去世)
+1. [官方辟谣宿淮收费站将被拆除](https://so.toutiao.com/search?keyword=官方辟谣宿淮收费站将被拆除)
+1. [成都机场路辅路发生严重交通事故](https://so.toutiao.com/search?keyword=成都机场路辅路发生严重交通事故)
+1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
+1. [媒体：缅北“明家”覆灭在即](https://so.toutiao.com/search?keyword=媒体：缅北“明家”覆灭在即)
+1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
+1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
 1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
-1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
 1. [床虱危机为何席卷全球](https://so.toutiao.com/search?keyword=床虱危机为何席卷全球)
-1. [缅甸果敢明学昌为何被中国警方通缉](https://so.toutiao.com/search?keyword=缅甸果敢明学昌为何被中国警方通缉)
-1. [拜登最重要的外交周被指已分崩离析](https://so.toutiao.com/search?keyword=拜登最重要的外交周被指已分崩离析)
-1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
-1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
-1. [为何是温州公安通缉缅北诈骗头目](https://so.toutiao.com/search?keyword=为何是温州公安通缉缅北诈骗头目)
-1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
-1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
-1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
 1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
 1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
-1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
-1. [三辆渣土车并行挡住后车](https://so.toutiao.com/search?keyword=三辆渣土车并行挡住后车)
-1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
-1. [华为鸿蒙原生应用时代即将到来](https://so.toutiao.com/search?keyword=华为鸿蒙原生应用时代即将到来)
+1. [广东中山车祸致1死1伤 司机被控制](https://so.toutiao.com/search?keyword=广东中山车祸致1死1伤+司机被控制)
 1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
+1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
+1. [中方谈联合国工作人员加沙住地遭袭](https://so.toutiao.com/search?keyword=中方谈联合国工作人员加沙住地遭袭)
+1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
+1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
+1. [马斯克：中国不会对外侵略别国](https://so.toutiao.com/search?keyword=马斯克：中国不会对外侵略别国)
+1. [女子恐高下山扶墙挪步](https://so.toutiao.com/search?keyword=女子恐高下山扶墙挪步)
+1. [长沙猪肉价格大降](https://so.toutiao.com/search?keyword=长沙猪肉价格大降)
 1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
+1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
+1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
+1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
+1. [记者：快船四巨头一起首发效果不行](https://so.toutiao.com/search?keyword=记者：快船四巨头一起首发效果不行)
+1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
+1. [媒体揭秘缅北果敢“四大家族”](https://so.toutiao.com/search?keyword=媒体揭秘缅北果敢“四大家族”)
+1. [山东将迎较强冷空气](https://so.toutiao.com/search?keyword=山东将迎较强冷空气)
+1. [原区长就餐落水身亡几大疑点引热议](https://so.toutiao.com/search?keyword=原区长就餐落水身亡几大疑点引热议)
+1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
+1. [信用卡每月少还百元内视作全额还款](https://so.toutiao.com/search?keyword=信用卡每月少还百元内视作全额还款)
+1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
+1. [世卫已设法与加沙希法医院取得联系](https://so.toutiao.com/search?keyword=世卫已设法与加沙希法医院取得联系)
+1. [哈马斯是如何回击以色列猛攻的](https://so.toutiao.com/search?keyword=哈马斯是如何回击以色列猛攻的)
+1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
+1. [国足今日坐经济舱飞赴泰国](https://so.toutiao.com/search?keyword=国足今日坐经济舱飞赴泰国)
+1. [媒体评四川一地规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=媒体评四川一地规定蹲地用餐罚20元)
+1. [网友称35岁存款3万盼退休](https://so.toutiao.com/search?keyword=网友称35岁存款3万盼退休)
+1. [尼泊尔要求改变贷款条款？中方回应](https://so.toutiao.com/search?keyword=尼泊尔要求改变贷款条款？中方回应)
+1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
+1. [南昌一小区有人坠楼砸中路人](https://so.toutiao.com/search?keyword=南昌一小区有人坠楼砸中路人)
+1. [四川凉山一村规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=四川凉山一村规定蹲地用餐罚20元)
+1. [当地回应村民不洗碗筷将被罚款10元](https://so.toutiao.com/search?keyword=当地回应村民不洗碗筷将被罚款10元)
+1. [官方回应蹲地用餐罚20元](https://so.toutiao.com/search?keyword=官方回应蹲地用餐罚20元)
+1. [缅甸果敢明学昌为何被中国警方通缉](https://so.toutiao.com/search?keyword=缅甸果敢明学昌为何被中国警方通缉)
+1. [拜登最重要的外交周被指已分崩离析](https://so.toutiao.com/search?keyword=拜登最重要的外交周被指已分崩离析)
+1. [为何是温州公安通缉缅北诈骗头目](https://so.toutiao.com/search?keyword=为何是温州公安通缉缅北诈骗头目)
+1. [三辆渣土车并行挡住后车](https://so.toutiao.com/search?keyword=三辆渣土车并行挡住后车)
+1. [华为鸿蒙原生应用时代即将到来](https://so.toutiao.com/search?keyword=华为鸿蒙原生应用时代即将到来)
 1. [收评：沪指震荡走高涨0.31%](https://so.toutiao.com/search?keyword=收评：沪指震荡走高涨0.31%)
 1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
 1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
-1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
 1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
-1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
 1. [东北将迎11月来第三轮雨雪](https://so.toutiao.com/search?keyword=东北将迎11月来第三轮雨雪)
 1. [印度影迷在影院放映时燃放烟花](https://so.toutiao.com/search?keyword=印度影迷在影院放映时燃放烟花)
 1. [迪拜航展 中巴“枭龙”战机很吸睛](https://so.toutiao.com/search?keyword=迪拜航展+中巴“枭龙”战机很吸睛)
 1. [外交部回应卡梅伦出任英国外交大臣](https://so.toutiao.com/search?keyword=外交部回应卡梅伦出任英国外交大臣)
-1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
 1. [沪深两市今日成交额合计8935亿元](https://so.toutiao.com/search?keyword=沪深两市今日成交额合计8935亿元)
 1. [中国公民已全部安全离开加沙](https://so.toutiao.com/search?keyword=中国公民已全部安全离开加沙)
 1. [网传九江火车站附近涉黄现象严重](https://so.toutiao.com/search?keyword=网传九江火车站附近涉黄现象严重)
@@ -68,12 +89,9 @@
 1. [日本计划明年1月发射情报收集卫星](https://so.toutiao.com/search?keyword=日本计划明年1月发射情报收集卫星)
 1. [这是90后父母取名的规律吗](https://so.toutiao.com/search?keyword=这是90后父母取名的规律吗)
 1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
-1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
 1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
 1. [迪拜航空展首日交易额近千亿美元](https://so.toutiao.com/search?keyword=迪拜航空展首日交易额近千亿美元)
 1. [陕西省发布一批人事任免通知](https://so.toutiao.com/search?keyword=陕西省发布一批人事任免通知)
-1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
-1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
 1. [檀健次与女生亲密搂肩被拍](https://so.toutiao.com/search?keyword=檀健次与女生亲密搂肩被拍)
 1. [韩媒：韩国散户“抄底”中国股市](https://so.toutiao.com/search?keyword=韩媒：韩国散户“抄底”中国股市)
 1. [颜丙涛与越南女友办跨国婚礼](https://so.toutiao.com/search?keyword=颜丙涛与越南女友办跨国婚礼)
