--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,59 +1,81 @@
 # 2023-11-14
 
-共 306 条
+共 322 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 19:00:46 GMT+0800 (China Standard Time) -->
-1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
-1. [凭什么不叠被子蹲地吃饭要被罚款](https://so.toutiao.com/search?keyword=凭什么不叠被子蹲地吃饭要被罚款)
+<!-- 最后更新时间 Tue Nov 14 2023 20:08:58 GMT+0800 (China Standard Time) -->
+1. [习近平离京赴美国出席中美元首会晤](https://so.toutiao.com/search?keyword=习近平离京赴美国出席中美元首会晤)
+1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
 1. [我国制造业转型升级持续提速](https://so.toutiao.com/search?keyword=我国制造业转型升级持续提速)
+1. [网红“快乐小赵”去世](https://so.toutiao.com/search?keyword=网红“快乐小赵”去世)
+1. [老人接孩子途中嫖娼 金项链被偷](https://so.toutiao.com/search?keyword=老人接孩子途中嫖娼+金项链被偷)
+1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
+1. [村超感谢黄日华在内香港明星队队员](https://so.toutiao.com/search?keyword=村超感谢黄日华在内香港明星队队员)
+1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
+1. [官方辟谣宿淮收费站将被拆除](https://so.toutiao.com/search?keyword=官方辟谣宿淮收费站将被拆除)
 1. [黄日华为友谊赛不理智行为道歉](https://so.toutiao.com/search?keyword=黄日华为友谊赛不理智行为道歉)
+1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
+1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
+1. [媒体：缅北“明家”覆灭在即](https://so.toutiao.com/search?keyword=媒体：缅北“明家”覆灭在即)
+1. [原区长就餐落水身亡几大疑点引热议](https://so.toutiao.com/search?keyword=原区长就餐落水身亡几大疑点引热议)
+1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
+1. [以色列总统之子在加沙战斗中失联](https://so.toutiao.com/search?keyword=以色列总统之子在加沙战斗中失联)
+1. [床虱危机为何席卷全球](https://so.toutiao.com/search?keyword=床虱危机为何席卷全球)
+1. [网友称上午被通知裁员下午办完手续](https://so.toutiao.com/search?keyword=网友称上午被通知裁员下午办完手续)
+1. [旧金山进入APEC时间](https://so.toutiao.com/search?keyword=旧金山进入APEC时间)
+1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
+1. [联合国102名工作人员死于巴以冲突](https://so.toutiao.com/search?keyword=联合国102名工作人员死于巴以冲突)
+1. [狗仔曝杨紫有男友](https://so.toutiao.com/search?keyword=狗仔曝杨紫有男友)
+1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
+1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [信用卡每月少还百元内视作全额还款](https://so.toutiao.com/search?keyword=信用卡每月少还百元内视作全额还款)
+1. [加沙希法医院过去3天至少32人死亡](https://so.toutiao.com/search?keyword=加沙希法医院过去3天至少32人死亡)
+1. [高职院校招保安要35岁以下硕士](https://so.toutiao.com/search?keyword=高职院校招保安要35岁以下硕士)
+1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
+1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
+1. [奥沙利文因精神疲惫退出冠中冠赛](https://so.toutiao.com/search?keyword=奥沙利文因精神疲惫退出冠中冠赛)
+1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
+1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
+1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
+1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
+1. [新能源车高速没电 4人推进服务区](https://so.toutiao.com/search?keyword=新能源车高速没电+4人推进服务区)
+1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
+1. [墨西哥一警局副局长遭伏击身亡](https://so.toutiao.com/search?keyword=墨西哥一警局副局长遭伏击身亡)
+1. [职务犯罪嫌疑人蔡雄厚被缉捕归案](https://so.toutiao.com/search?keyword=职务犯罪嫌疑人蔡雄厚被缉捕归案)
+1. [网友称35岁存款3万盼退休](https://so.toutiao.com/search?keyword=网友称35岁存款3万盼退休)
+1. [蔚来努力降本增效以实现顺利过冬](https://so.toutiao.com/search?keyword=蔚来努力降本增效以实现顺利过冬)
+1. [山东一工地挖出巨石](https://so.toutiao.com/search?keyword=山东一工地挖出巨石)
+1. [尼泊尔要求改变贷款条款？中方回应](https://so.toutiao.com/search?keyword=尼泊尔要求改变贷款条款？中方回应)
+1. [马斯克：美国现在缺芯片两年后缺电](https://so.toutiao.com/search?keyword=马斯克：美国现在缺芯片两年后缺电)
+1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
+1. [的哥摆拍猥亵无法付钱女乘客被拘](https://so.toutiao.com/search?keyword=的哥摆拍猥亵无法付钱女乘客被拘)
+1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
+1. [高盛给予A股市场“高配”建议](https://so.toutiao.com/search?keyword=高盛给予A股市场“高配”建议)
+1. [双11年轻人购物车塞满国货](https://so.toutiao.com/search?keyword=双11年轻人购物车塞满国货)
+1. [尹锡悦19个月外访16次引不满](https://so.toutiao.com/search?keyword=尹锡悦19个月外访16次引不满)
+1. [凭什么不叠被子蹲地吃饭要被罚款](https://so.toutiao.com/search?keyword=凭什么不叠被子蹲地吃饭要被罚款)
 1. [哈尔滨一地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=哈尔滨一地回应政务大厅全天工作6小时)
 1. [广东中山车祸致1死1伤 司机被控制](https://so.toutiao.com/search?keyword=广东中山车祸致1死1伤+司机被控制)
-1. [网红“快乐小赵”去世](https://so.toutiao.com/search?keyword=网红“快乐小赵”去世)
-1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
-1. [官方辟谣宿淮收费站将被拆除](https://so.toutiao.com/search?keyword=官方辟谣宿淮收费站将被拆除)
 1. [四川一乡镇发通知不叠被子罚10元](https://so.toutiao.com/search?keyword=四川一乡镇发通知不叠被子罚10元)
 1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
 1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
-1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
-1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
-1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
-1. [媒体：缅北“明家”覆灭在即](https://so.toutiao.com/search?keyword=媒体：缅北“明家”覆灭在即)
-1. [老人接孩子途中嫖娼 金项链被偷](https://so.toutiao.com/search?keyword=老人接孩子途中嫖娼+金项链被偷)
-1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
-1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
 1. [成都机场路辅路发生严重交通事故](https://so.toutiao.com/search?keyword=成都机场路辅路发生严重交通事故)
-1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
-1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
 1. [教育局取消招聘计划致毕业生错过就业](https://so.toutiao.com/search?keyword=教育局取消招聘计划致毕业生错过就业)
-1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
 1. [西藏林芝市人大常委会原副主任逝世](https://so.toutiao.com/search?keyword=西藏林芝市人大常委会原副主任逝世)
 1. [女子装修砸开飘窗看见邻居家柜子](https://so.toutiao.com/search?keyword=女子装修砸开飘窗看见邻居家柜子)
-1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
 1. [美加州州长回应旧金山“创卫运动”](https://so.toutiao.com/search?keyword=美加州州长回应旧金山“创卫运动”)
-1. [尼泊尔要求改变贷款条款？中方回应](https://so.toutiao.com/search?keyword=尼泊尔要求改变贷款条款？中方回应)
-1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
-1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
-1. [床虱危机为何席卷全球](https://so.toutiao.com/search?keyword=床虱危机为何席卷全球)
-1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
-1. [信用卡每月少还百元内视作全额还款](https://so.toutiao.com/search?keyword=信用卡每月少还百元内视作全额还款)
-1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
 1. [女子恐高下山扶墙挪步](https://so.toutiao.com/search?keyword=女子恐高下山扶墙挪步)
 1. [英伟达发布新一代芯片H200](https://so.toutiao.com/search?keyword=英伟达发布新一代芯片H200)
 1. [长沙猪肉价格大降](https://so.toutiao.com/search?keyword=长沙猪肉价格大降)
-1. [网友称35岁存款3万盼退休](https://so.toutiao.com/search?keyword=网友称35岁存款3万盼退休)
-1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
 1. [黄晓明晒与父母及小海绵合照](https://so.toutiao.com/search?keyword=黄晓明晒与父母及小海绵合照)
 1. [国足赛前宣传片：伴我闯荡一起向往](https://so.toutiao.com/search?keyword=国足赛前宣传片：伴我闯荡一起向往)
 1. [媒体评四川一地规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=媒体评四川一地规定蹲地用餐罚20元)
-1. [网友称上午被通知裁员下午办完手续](https://so.toutiao.com/search?keyword=网友称上午被通知裁员下午办完手续)
 1. [南昌一小区有人坠楼砸中路人](https://so.toutiao.com/search?keyword=南昌一小区有人坠楼砸中路人)
 1. [以坦克开火第一视角：猛烈炮轰加沙](https://so.toutiao.com/search?keyword=以坦克开火第一视角：猛烈炮轰加沙)
 1. [国内油价或将实现4连跌](https://so.toutiao.com/search?keyword=国内油价或将实现4连跌)
 1. [印尼总统敦促拜登制止加沙“暴行”](https://so.toutiao.com/search?keyword=印尼总统敦促拜登制止加沙“暴行”)
 1. [张雪峰为百名黑龙江贫困生捐羽绒服](https://so.toutiao.com/search?keyword=张雪峰为百名黑龙江贫困生捐羽绒服)
-1. [高职院校招保安要35岁以下硕士](https://so.toutiao.com/search?keyword=高职院校招保安要35岁以下硕士)
 1. [当地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=当地回应政务大厅全天工作6小时)
 1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
 1. [中方谈联合国工作人员加沙住地遭袭](https://so.toutiao.com/search?keyword=中方谈联合国工作人员加沙住地遭袭)
@@ -61,13 +83,11 @@
 1. [记者：快船四巨头一起首发效果不行](https://so.toutiao.com/search?keyword=记者：快船四巨头一起首发效果不行)
 1. [媒体揭秘缅北果敢“四大家族”](https://so.toutiao.com/search?keyword=媒体揭秘缅北果敢“四大家族”)
 1. [山东将迎较强冷空气](https://so.toutiao.com/search?keyword=山东将迎较强冷空气)
-1. [原区长就餐落水身亡几大疑点引热议](https://so.toutiao.com/search?keyword=原区长就餐落水身亡几大疑点引热议)
 1. [创业失败后丈夫送外卖妻子带娃摆摊](https://so.toutiao.com/search?keyword=创业失败后丈夫送外卖妻子带娃摆摊)
 1. [孙德顺是今年受贿最多的“老虎”](https://so.toutiao.com/search?keyword=孙德顺是今年受贿最多的“老虎”)
 1. [世卫已设法与加沙希法医院取得联系](https://so.toutiao.com/search?keyword=世卫已设法与加沙希法医院取得联系)
 1. [哈马斯是如何回击以色列猛攻的](https://so.toutiao.com/search?keyword=哈马斯是如何回击以色列猛攻的)
 1. [国足今日坐经济舱飞赴泰国](https://so.toutiao.com/search?keyword=国足今日坐经济舱飞赴泰国)
-1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
 1. [四川凉山一村规定蹲地用餐罚20元](https://so.toutiao.com/search?keyword=四川凉山一村规定蹲地用餐罚20元)
 1. [当地回应村民不洗碗筷将被罚款10元](https://so.toutiao.com/search?keyword=当地回应村民不洗碗筷将被罚款10元)
 1. [官方回应蹲地用餐罚20元](https://so.toutiao.com/search?keyword=官方回应蹲地用餐罚20元)
@@ -79,7 +99,6 @@
 1. [收评：沪指震荡走高涨0.31%](https://so.toutiao.com/search?keyword=收评：沪指震荡走高涨0.31%)
 1. [雷军秀双11战绩 评论区沦陷](https://so.toutiao.com/search?keyword=雷军秀双11战绩+评论区沦陷)
 1. [工人浇筑水泥时抽走20根钢筋被质疑](https://so.toutiao.com/search?keyword=工人浇筑水泥时抽走20根钢筋被质疑)
-1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
 1. [东北将迎11月来第三轮雨雪](https://so.toutiao.com/search?keyword=东北将迎11月来第三轮雨雪)
 1. [印度影迷在影院放映时燃放烟花](https://so.toutiao.com/search?keyword=印度影迷在影院放映时燃放烟花)
 1. [迪拜航展 中巴“枭龙”战机很吸睛](https://so.toutiao.com/search?keyword=迪拜航展+中巴“枭龙”战机很吸睛)
@@ -109,7 +128,6 @@
 1. [檀健次与女生亲密搂肩被拍](https://so.toutiao.com/search?keyword=檀健次与女生亲密搂肩被拍)
 1. [韩媒：韩国散户“抄底”中国股市](https://so.toutiao.com/search?keyword=韩媒：韩国散户“抄底”中国股市)
 1. [颜丙涛与越南女友办跨国婚礼](https://so.toutiao.com/search?keyword=颜丙涛与越南女友办跨国婚礼)
-1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
 1. [“家门口”就医要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医要“有”还要“优”)
 1. [卡梅伦复出影响几何](https://so.toutiao.com/search?keyword=卡梅伦复出影响几何)
 1. [交警在高架巡逻时意外摔倒](https://so.toutiao.com/search?keyword=交警在高架巡逻时意外摔倒)
@@ -205,7 +223,6 @@
 1. [侯友宜：不能再让民进党新潮流当选](https://so.toutiao.com/search?keyword=侯友宜：不能再让民进党新潮流当选)
 1. [3D还原校长强奸猥亵22名学生案](https://so.toutiao.com/search?keyword=3D还原校长强奸猥亵22名学生案)
 1. [女子失业被妈妈雇佣当司机日薪20元](https://so.toutiao.com/search?keyword=女子失业被妈妈雇佣当司机日薪20元)
-1. [联合国102名工作人员死于巴以冲突](https://so.toutiao.com/search?keyword=联合国102名工作人员死于巴以冲突)
 1. [92岁妈妈把女儿家打造成从前模样](https://so.toutiao.com/search?keyword=92岁妈妈把女儿家打造成从前模样)
 1. [SpaceX今年已创下一项世界纪录](https://so.toutiao.com/search?keyword=SpaceX今年已创下一项世界纪录)
 1. [学青会林雨薇葛曼棋搭档夺金](https://so.toutiao.com/search?keyword=学青会林雨薇葛曼棋搭档夺金)
@@ -271,7 +288,6 @@
 1. [先锋领航退出中国：仍看好中国市场](https://so.toutiao.com/search?keyword=先锋领航退出中国：仍看好中国市场)
 1. [狐狸脑袋卡进杯子蹲在路边等待救援](https://so.toutiao.com/search?keyword=狐狸脑袋卡进杯子蹲在路边等待救援)
 1. [会影响血压测量结果的因素有哪些](https://so.toutiao.com/search?keyword=会影响血压测量结果的因素有哪些)
-1. [的哥摆拍猥亵无法付钱女乘客被拘](https://so.toutiao.com/search?keyword=的哥摆拍猥亵无法付钱女乘客被拘)
 1. [智能手机或将于2050年退场](https://so.toutiao.com/search?keyword=智能手机或将于2050年退场)
 1. [网友说突然感觉消费水平跟不上了](https://so.toutiao.com/search?keyword=网友说突然感觉消费水平跟不上了)
 1. [媒体评学生实习领导提成600万](https://so.toutiao.com/search?keyword=媒体评学生实习领导提成600万)
