--- a/archives/toutiao-search/2023-11-14.md
+++ b/archives/toutiao-search/2023-11-14.md
@@ -1,54 +1,73 @@
 # 2023-11-14
 
-共 322 条
+共 335 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 14 2023 20:08:58 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Nov 14 2023 21:07:35 GMT+0800 (China Standard Time) -->
 1. [习近平离京赴美国出席中美元首会晤](https://so.toutiao.com/search?keyword=习近平离京赴美国出席中美元首会晤)
-1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
-1. [我国制造业转型升级持续提速](https://so.toutiao.com/search?keyword=我国制造业转型升级持续提速)
-1. [网红“快乐小赵”去世](https://so.toutiao.com/search?keyword=网红“快乐小赵”去世)
-1. [老人接孩子途中嫖娼 金项链被偷](https://so.toutiao.com/search?keyword=老人接孩子途中嫖娼+金项链被偷)
-1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
-1. [村超感谢黄日华在内香港明星队队员](https://so.toutiao.com/search?keyword=村超感谢黄日华在内香港明星队队员)
-1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
-1. [官方辟谣宿淮收费站将被拆除](https://so.toutiao.com/search?keyword=官方辟谣宿淮收费站将被拆除)
 1. [黄日华为友谊赛不理智行为道歉](https://so.toutiao.com/search?keyword=黄日华为友谊赛不理智行为道歉)
+1. [我国制造业转型升级持续提速](https://so.toutiao.com/search?keyword=我国制造业转型升级持续提速)
+1. [叶剑英元帅夫人吴博逝世](https://so.toutiao.com/search?keyword=叶剑英元帅夫人吴博逝世)
+1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
+1. [网红“快乐小赵”去世](https://so.toutiao.com/search?keyword=网红“快乐小赵”去世)
+1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
+1. [多家银行就信用卡还款出新规](https://so.toutiao.com/search?keyword=多家银行就信用卡还款出新规)
+1. [前首相卡梅伦突然复出轰动英国](https://so.toutiao.com/search?keyword=前首相卡梅伦突然复出轰动英国)
+1. [老人接孩子途中嫖娼 金项链被偷](https://so.toutiao.com/search?keyword=老人接孩子途中嫖娼+金项链被偷)
+1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
 1. [百万网红三太被暴打现场画面曝光](https://so.toutiao.com/search?keyword=百万网红三太被暴打现场画面曝光)
 1. [女子骑车与外卖小哥相撞被索赔36万](https://so.toutiao.com/search?keyword=女子骑车与外卖小哥相撞被索赔36万)
 1. [媒体：缅北“明家”覆灭在即](https://so.toutiao.com/search?keyword=媒体：缅北“明家”覆灭在即)
 1. [原区长就餐落水身亡几大疑点引热议](https://so.toutiao.com/search?keyword=原区长就餐落水身亡几大疑点引热议)
-1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
 1. [渐冻人蔡磊试用可穿戴人工喉](https://so.toutiao.com/search?keyword=渐冻人蔡磊试用可穿戴人工喉)
-1. [以色列总统之子在加沙战斗中失联](https://so.toutiao.com/search?keyword=以色列总统之子在加沙战斗中失联)
-1. [床虱危机为何席卷全球](https://so.toutiao.com/search?keyword=床虱危机为何席卷全球)
-1. [网友称上午被通知裁员下午办完手续](https://so.toutiao.com/search?keyword=网友称上午被通知裁员下午办完手续)
-1. [旧金山进入APEC时间](https://so.toutiao.com/search?keyword=旧金山进入APEC时间)
+1. [山东一工地挖出巨石](https://so.toutiao.com/search?keyword=山东一工地挖出巨石)
+1. [考辛斯将参加国内街头篮球赛](https://so.toutiao.com/search?keyword=考辛斯将参加国内街头篮球赛)
+1. [女子装修砸开飘窗看见邻居家柜子](https://so.toutiao.com/search?keyword=女子装修砸开飘窗看见邻居家柜子)
 1. [以称哈马斯“已失去对加沙的控制”](https://so.toutiao.com/search?keyword=以称哈马斯“已失去对加沙的控制”)
+1. [英前首相否认以方聘请其在加沙任职](https://so.toutiao.com/search?keyword=英前首相否认以方聘请其在加沙任职)
+1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
+1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
+1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
+1. [市民公园撒网捕鱼被调侃为逮鱼大赛](https://so.toutiao.com/search?keyword=市民公园撒网捕鱼被调侃为逮鱼大赛)
+1. [vivo副总：想立马回产线打螺钉](https://so.toutiao.com/search?keyword=vivo副总：想立马回产线打螺钉)
+1. [辽宁国资委原主任王世伟被调查](https://so.toutiao.com/search?keyword=辽宁国资委原主任王世伟被调查)
+1. [网友称35岁存款3万盼退休](https://so.toutiao.com/search?keyword=网友称35岁存款3万盼退休)
+1. [穿越机撞向俄T-90坦克引爆反应装甲](https://so.toutiao.com/search?keyword=穿越机撞向俄T-90坦克引爆反应装甲)
+1. [以色列总统之子在加沙战斗中失联](https://so.toutiao.com/search?keyword=以色列总统之子在加沙战斗中失联)
+1. [中美元首会晤可能谈些什么](https://so.toutiao.com/search?keyword=中美元首会晤可能谈些什么)
+1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
+1. [党媒：朝着构建亚太命运共同体迈进](https://so.toutiao.com/search?keyword=党媒：朝着构建亚太命运共同体迈进)
+1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
+1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
+1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
+1. [网友称上午被通知裁员下午办完手续](https://so.toutiao.com/search?keyword=网友称上午被通知裁员下午办完手续)
+1. [23岁女生工地当包工头](https://so.toutiao.com/search?keyword=23岁女生工地当包工头)
+1. [中方要求缅方确保中缅边境安全稳定](https://so.toutiao.com/search?keyword=中方要求缅方确保中缅边境安全稳定)
+1. [高职院校招保安要35岁以下硕士](https://so.toutiao.com/search?keyword=高职院校招保安要35岁以下硕士)
+1. [马斯克：美国现在缺芯片两年后缺电](https://so.toutiao.com/search?keyword=马斯克：美国现在缺芯片两年后缺电)
+1. [记者爬行救下冰窟男童9个月后被认出](https://so.toutiao.com/search?keyword=记者爬行救下冰窟男童9个月后被认出)
+1. [尼泊尔要求改变贷款条款？中方回应](https://so.toutiao.com/search?keyword=尼泊尔要求改变贷款条款？中方回应)
+1. [马斯克：中国不会对外侵略别国](https://so.toutiao.com/search?keyword=马斯克：中国不会对外侵略别国)
+1. [檀健次与女生亲密搂肩被拍](https://so.toutiao.com/search?keyword=檀健次与女生亲密搂肩被拍)
+1. [村超感谢黄日华在内香港明星队队员](https://so.toutiao.com/search?keyword=村超感谢黄日华在内香港明星队队员)
+1. [卫健委：呼吸道疾病叠加感染很少见](https://so.toutiao.com/search?keyword=卫健委：呼吸道疾病叠加感染很少见)
+1. [住建部部长：构建房地产发展新模式](https://so.toutiao.com/search?keyword=住建部部长：构建房地产发展新模式)
+1. [邝肖卿首次成为中国女首富](https://so.toutiao.com/search?keyword=邝肖卿首次成为中国女首富)
+1. [官方辟谣宿淮收费站将被拆除](https://so.toutiao.com/search?keyword=官方辟谣宿淮收费站将被拆除)
+1. [余承东回应问界M5试驾车事故](https://so.toutiao.com/search?keyword=余承东回应问界M5试驾车事故)
+1. [床虱危机为何席卷全球](https://so.toutiao.com/search?keyword=床虱危机为何席卷全球)
+1. [旧金山进入APEC时间](https://so.toutiao.com/search?keyword=旧金山进入APEC时间)
 1. [联合国102名工作人员死于巴以冲突](https://so.toutiao.com/search?keyword=联合国102名工作人员死于巴以冲突)
 1. [狗仔曝杨紫有男友](https://so.toutiao.com/search?keyword=狗仔曝杨紫有男友)
 1. [以军继续推进地面行动](https://so.toutiao.com/search?keyword=以军继续推进地面行动)
-1. [专家：巴以冲突让俄军看到了希望](https://so.toutiao.com/search?keyword=专家：巴以冲突让俄军看到了希望)
 1. [信用卡每月少还百元内视作全额还款](https://so.toutiao.com/search?keyword=信用卡每月少还百元内视作全额还款)
 1. [加沙希法医院过去3天至少32人死亡](https://so.toutiao.com/search?keyword=加沙希法医院过去3天至少32人死亡)
-1. [高职院校招保安要35岁以下硕士](https://so.toutiao.com/search?keyword=高职院校招保安要35岁以下硕士)
-1. [《狂飙》高启盛扮演者就随地小便道歉](https://so.toutiao.com/search?keyword=《狂飙》高启盛扮演者就随地小便道歉)
-1. [北京大学领导层调整](https://so.toutiao.com/search?keyword=北京大学领导层调整)
 1. [奥沙利文因精神疲惫退出冠中冠赛](https://so.toutiao.com/search?keyword=奥沙利文因精神疲惫退出冠中冠赛)
-1. [下周油价或将迎来大幅下跌](https://so.toutiao.com/search?keyword=下周油价或将迎来大幅下跌)
-1. [双十一手机市场：华为被高估了吗](https://so.toutiao.com/search?keyword=双十一手机市场：华为被高估了吗)
-1. [男子彩票中782万和好兄弟平分](https://so.toutiao.com/search?keyword=男子彩票中782万和好兄弟平分)
-1. [在何猷君身上看到生理性喜欢的样子](https://so.toutiao.com/search?keyword=在何猷君身上看到生理性喜欢的样子)
 1. [新能源车高速没电 4人推进服务区](https://so.toutiao.com/search?keyword=新能源车高速没电+4人推进服务区)
-1. [刘德华个人演唱会官宣](https://so.toutiao.com/search?keyword=刘德华个人演唱会官宣)
 1. [墨西哥一警局副局长遭伏击身亡](https://so.toutiao.com/search?keyword=墨西哥一警局副局长遭伏击身亡)
 1. [职务犯罪嫌疑人蔡雄厚被缉捕归案](https://so.toutiao.com/search?keyword=职务犯罪嫌疑人蔡雄厚被缉捕归案)
-1. [网友称35岁存款3万盼退休](https://so.toutiao.com/search?keyword=网友称35岁存款3万盼退休)
 1. [蔚来努力降本增效以实现顺利过冬](https://so.toutiao.com/search?keyword=蔚来努力降本增效以实现顺利过冬)
-1. [山东一工地挖出巨石](https://so.toutiao.com/search?keyword=山东一工地挖出巨石)
-1. [尼泊尔要求改变贷款条款？中方回应](https://so.toutiao.com/search?keyword=尼泊尔要求改变贷款条款？中方回应)
-1. [马斯克：美国现在缺芯片两年后缺电](https://so.toutiao.com/search?keyword=马斯克：美国现在缺芯片两年后缺电)
-1. [雪莉生前纪录片完整版公开](https://so.toutiao.com/search?keyword=雪莉生前纪录片完整版公开)
 1. [的哥摆拍猥亵无法付钱女乘客被拘](https://so.toutiao.com/search?keyword=的哥摆拍猥亵无法付钱女乘客被拘)
 1. [泰国考虑请中国派警察？外交部回应](https://so.toutiao.com/search?keyword=泰国考虑请中国派警察？外交部回应)
 1. [高盛给予A股市场“高配”建议](https://so.toutiao.com/search?keyword=高盛给予A股市场“高配”建议)
@@ -58,12 +77,10 @@
 1. [哈尔滨一地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=哈尔滨一地回应政务大厅全天工作6小时)
 1. [广东中山车祸致1死1伤 司机被控制](https://so.toutiao.com/search?keyword=广东中山车祸致1死1伤+司机被控制)
 1. [四川一乡镇发通知不叠被子罚10元](https://so.toutiao.com/search?keyword=四川一乡镇发通知不叠被子罚10元)
-1. [巴总统说哈马斯杀害妇孺陷害以方？](https://so.toutiao.com/search?keyword=巴总统说哈马斯杀害妇孺陷害以方？)
 1. [缅北明学昌家族究竟犯下何滔天罪孽](https://so.toutiao.com/search?keyword=缅北明学昌家族究竟犯下何滔天罪孽)
 1. [成都机场路辅路发生严重交通事故](https://so.toutiao.com/search?keyword=成都机场路辅路发生严重交通事故)
 1. [教育局取消招聘计划致毕业生错过就业](https://so.toutiao.com/search?keyword=教育局取消招聘计划致毕业生错过就业)
 1. [西藏林芝市人大常委会原副主任逝世](https://so.toutiao.com/search?keyword=西藏林芝市人大常委会原副主任逝世)
-1. [女子装修砸开飘窗看见邻居家柜子](https://so.toutiao.com/search?keyword=女子装修砸开飘窗看见邻居家柜子)
 1. [美加州州长回应旧金山“创卫运动”](https://so.toutiao.com/search?keyword=美加州州长回应旧金山“创卫运动”)
 1. [女子恐高下山扶墙挪步](https://so.toutiao.com/search?keyword=女子恐高下山扶墙挪步)
 1. [英伟达发布新一代芯片H200](https://so.toutiao.com/search?keyword=英伟达发布新一代芯片H200)
@@ -79,7 +96,6 @@
 1. [当地回应政务大厅全天工作6小时](https://so.toutiao.com/search?keyword=当地回应政务大厅全天工作6小时)
 1. [黄日华踢球员后大批粉丝脱粉](https://so.toutiao.com/search?keyword=黄日华踢球员后大批粉丝脱粉)
 1. [中方谈联合国工作人员加沙住地遭袭](https://so.toutiao.com/search?keyword=中方谈联合国工作人员加沙住地遭袭)
-1. [马斯克：中国不会对外侵略别国](https://so.toutiao.com/search?keyword=马斯克：中国不会对外侵略别国)
 1. [记者：快船四巨头一起首发效果不行](https://so.toutiao.com/search?keyword=记者：快船四巨头一起首发效果不行)
 1. [媒体揭秘缅北果敢“四大家族”](https://so.toutiao.com/search?keyword=媒体揭秘缅北果敢“四大家族”)
 1. [山东将迎较强冷空气](https://so.toutiao.com/search?keyword=山东将迎较强冷空气)
@@ -109,7 +125,6 @@
 1. [应急科普：消防安全8大常见误区](https://so.toutiao.com/search?keyword=应急科普：消防安全8大常见误区)
 1. [看空军八一飞行表演队炫舞迪拜](https://so.toutiao.com/search?keyword=看空军八一飞行表演队炫舞迪拜)
 1. [秋粮收购已累计超4000万吨](https://so.toutiao.com/search?keyword=秋粮收购已累计超4000万吨)
-1. [邝肖卿首次成为中国女首富](https://so.toutiao.com/search?keyword=邝肖卿首次成为中国女首富)
 1. [癌症和这七个因素有关](https://so.toutiao.com/search?keyword=癌症和这七个因素有关)
 1. [官方辟谣铲车将垃圾推入长江](https://so.toutiao.com/search?keyword=官方辟谣铲车将垃圾推入长江)
 1. [女子让司机开50公里免费送还手机](https://so.toutiao.com/search?keyword=女子让司机开50公里免费送还手机)
@@ -121,11 +136,9 @@
 1. [什么样的人易得糖尿病](https://so.toutiao.com/search?keyword=什么样的人易得糖尿病)
 1. [日本计划明年1月发射情报收集卫星](https://so.toutiao.com/search?keyword=日本计划明年1月发射情报收集卫星)
 1. [这是90后父母取名的规律吗](https://so.toutiao.com/search?keyword=这是90后父母取名的规律吗)
-1. [楼下用震楼器遭楼上母女踹门砸监控](https://so.toutiao.com/search?keyword=楼下用震楼器遭楼上母女踹门砸监控)
 1. [林心如夸小S演大尺度戏放得开](https://so.toutiao.com/search?keyword=林心如夸小S演大尺度戏放得开)
 1. [迪拜航空展首日交易额近千亿美元](https://so.toutiao.com/search?keyword=迪拜航空展首日交易额近千亿美元)
 1. [陕西省发布一批人事任免通知](https://so.toutiao.com/search?keyword=陕西省发布一批人事任免通知)
-1. [檀健次与女生亲密搂肩被拍](https://so.toutiao.com/search?keyword=檀健次与女生亲密搂肩被拍)
 1. [韩媒：韩国散户“抄底”中国股市](https://so.toutiao.com/search?keyword=韩媒：韩国散户“抄底”中国股市)
 1. [颜丙涛与越南女友办跨国婚礼](https://so.toutiao.com/search?keyword=颜丙涛与越南女友办跨国婚礼)
 1. [“家门口”就医要“有”还要“优”](https://so.toutiao.com/search?keyword=“家门口”就医要“有”还要“优”)
