--- a/archives/zhihu-search/2023-11-15.md
+++ b/archives/zhihu-search/2023-11-15.md
@@ -1,12 +1,15 @@
 # 2023-11-15
 
-共 11 条
+共 14 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Wed Nov 15 2023 15:00:56 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Nov 15 2023 16:00:47 GMT+0800 (China Standard Time) -->
+1. [快乐小赵](https://www.zhihu.com/search?q=快乐小赵)
 1. [内行人眼中的全屋定制](https://www.zhihu.com/search?q=内行人眼中的全屋定制)
+1. [明星考编有什么好处](https://www.zhihu.com/search?q=明星考编有什么好处)
 1. [考研需要买平板吗](https://www.zhihu.com/search?q=考研需要买平板吗)
 1. [再见爱人](https://www.zhihu.com/search?q=再见爱人)
+1. [明星考编上岸](https://www.zhihu.com/search?q=明星考编上岸)
 1. [考研政治怎么复习](https://www.zhihu.com/search?q=考研政治怎么复习)
 1. [跨专业考研](https://www.zhihu.com/search?q=跨专业考研)
 1. [考研数学推荐书籍](https://www.zhihu.com/search?q=考研数学推荐书籍)
